# sommelier-drive-client

./: Cargo.toml  README.md  build.sh  cbindgen.toml  sommelier_drive_client.h
src/: c_api.rs  cli.rs  file.rs  http_client.rs  lib.rs  types.rs  user.rs  utils.rs
tests/: file_add.rs  files.rs  user.rs  utils.rs
tests/c_api_tests/: files.c  files_test.sh  user.c  user_tests.sh
