[package]
name = "sommelier-drive-client"
version = "0.1.0"
edition = "2021"
authors = ["Sora Suegami"]

[dependencies]
sommelier-drive-cryptos = {git = "https://github.com/Sommelier-db/sommelier-drive-cryptos.git", version = "0.1.0", default-features=false}
rust-searchable-pke = {git = "https://github.com/SoraSuegami/rust-searchable-pke.git", version = "0.1.0", default-features=false}
paired = "0.22.0"
groupy = "0.4.1"
serde_json = "1.0"
serde = {version = "1.0.103", features = ["derive"]}
thiserror = "1.0.37"
getrandom = { version = "0.2", features = ["js"] }
reqwest-wasm = {version = "0.11.15", features = ["json"]}
anyhow = "1.0.66"
hex = {version = "0.4.3"}
rand_core = "0.5.1"
aes-gcm = "0.10.1" 
rand = "0.7.0"
bytes = "1"
easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git", optional = true}
errno = {version = "0.2.8", optional = true}
#futures = {version = "0.3.25", features = ["executor"], optional = true}
tokio = {version = "1.21.2", features = ["rt", "rt-multi-thread"], optional = true}
c_vec = {version="2.0.0", optional = true}
promkit = {version="0.1.2", git = "https://github.com/ynqa/promkit.git", optional = true}
once_cell = {version="1.15.0", optional = true}

[dev-dependencies]
tokio = {version = "1.21.2", features = ["macros"]}
httpmock = "0.6.6"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "sommelier-drive-client-cli"
path = "src/cli.rs"

[features]
default = ["c_api","cli"]
c_api = ["easy_ffi", "errno", "tokio", "c_vec"]
cli = ["promkit","tokio", "once_cell"]

[profile.test] 
opt-level = 3